updated at: 2020-03-16 00:41, バーチャルキャストイベントポスターカレンダー - ぽけもり BOOTH支部 - BOOTH

--- a/VRChat/94/1369294.html
+++ b/VRChat/94/1369294.html
@@ -162,6 +162,56 @@
                                   "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
                                     <div class=
                                     "variation-name u-text-wrap">
+                                      VRChat用プレハブ v1.2.0
+                                    </div>
+                                    <div class=
+                                    "u-tpg-caption1 u-text-gray-300">
+                                      ダウンロード商品
+                                    </div>
+                                  </div>
+                                  <div class=
+                                  "variation-price u-text-right">
+                                    ¥ 0
+                                  </div>
+                                </div>
+                                <div class="variation-cart">
+                                  <div class="cart-button-wrap">
+                                    <a class=
+                                    "btn add-cart full-length"
+                                    title=
+                                    "バーチャルキャストイベントポスターカレンダー_1.2.0.zip"
+                                    href=
+                                    "https://booth.pm/downloadables/952287">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        バーチャルキャストイベントポスターカレンダー_1.2.0
+                                      </div>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(2.51 MB)
+                                      </div>
+                                    </div></a>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+                          <li class="variation-item u-border-t">
+                            <div class="u-d-flex">
+                              <div class="u-flex-1 u-min-w-0">
+                                <div class="u-d-flex">
+                                  <div class=
+                                  "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
+                                    <div class=
+                                    "variation-name u-text-wrap">
                                       VRChat用プレハブ v1.1.0
                                     </div>
                                     <div class=
@@ -336,8 +386,17 @@
                             ▚▚▚ THE SEED ONLINEの小物(アイテム)
                             https://seed.online/user/items/3529bfa5c9e370544c182d929ffd01a415c61b34b3d04ec569498bee26f8d546
                             ▚▚▚ VRChatワールド用プレハブ
-                            このページからUnitypackageをダウンロード
-                            ※VRChatのQuest版では、利用しているVRC_Panoramaコンポーネントが正常に動作しないため、読み込み失敗が起こりやすくなります。
+                            このページからUnitypackageをダウンロード 【プレハブ】
+                            vcas-calendar.prefab … 通常のカレンダー
+                            vcas-calendar-lite.prefab …
+                            Quest向けに読み込む容量を約100KBまで削減した軽量版カレンダー
+                            ※VRChatのQuest版ではVRC_Panoramaが正常に動作せず、読み込む画像の容量が大きいほど問題が起こりやすくなるため
+                            【unitypackage】 VirtualCast Event Poster
+                            Calendar (with Auto
+                            Switcher).unitypackage …
+                            プラットフォームを切り替えた時などに開いていたシーン上のカレンダーについて、PCビルドでは軽量版から通常版へ、Androidビルドでは通常版から軽量版へ自動的に切り替えるエディタ拡張を含む
+                            VirtualCast Event Poster
+                            Calendar.unitypackage … 上記スクリプトを含まない
                             バーチャルキャストイベントポスターカレンダーは、坪倉輝明さんの『VRChatイベントカレンダーPrefab』のアイデア、デザインを基にして作成しました。
                             https://tsubokulab.booth.pm/items/1223535
                           </p>
