updated at: 2020-03-16 03:15, オリジナル３Dモデル「小鬼ちゃん」Ver1.06+「巨大な筆(鈍器)Ver1.03+墨エフェクト」 - 無計画工房 - BOOTH

--- a/VRChat/84/1229684.html
+++ b/VRChat/84/1229684.html
@@ -7,7 +7,7 @@
       BOOTH
     </title>
     <meta name="description" content=
-    "【オリジナル3Dモデル】小鬼ちゃん+巨大な筆（鈍器） 紹介文 　制作者　おいたん 小鬼ちゃん Ver1.06 巨大な筆（鈍器） Ver1.03 桜ノ簪（髪飾り） Ver1.04 ※Verの更新の詳細は商品ページの最後に記載。 利用規約にご同意を頂いた上で 商品内容を熟読された方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 日本国外のサイトで販売されているものは非正規品です。 マルウェアが含まれる可能性があるので購入しないでください。 Those sold at sites outside of Japan are non-genuine. Do not">
+    "3月21～22日の間 期間限定でセールを予定。 【オリジナル3Dモデル】小鬼ちゃん+巨大な筆（鈍器） 紹介文 　制作者　おいたん 小鬼ちゃん Ver1.06 巨大な筆（鈍器） Ver1.03 桜ノ簪（髪飾り） Ver1.04 ※Verの更新の詳細は商品ページの最後に記載。 利用規約にご同意を頂いた上で 商品内容を熟読された方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 日本国外のサイトで販売されているものは非正規品です。 マルウェアが含まれる可能性があるので購入しないでください。 Those sold at sites outside of Japan">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1229684">
@@ -16,14 +16,14 @@
     <meta name="twitter:title" content=
     "オリジナル３Dモデル「小鬼ちゃん」Ver1.06+「巨大な筆(鈍器)Ver1.03+墨エフェクト」 - 無計画工房 - BOOTH">
     <meta name="twitter:description" content=
-    "【オリジナル3Dモデル】小鬼ちゃん+巨大な筆（鈍器） 紹介文 　制作者　おいたん 小鬼ちゃん Ver1.06 巨大な筆（鈍器） Ver1.03 桜ノ簪（髪飾り） Ver1.04 ※Verの更新の詳細は商品ページの最後に記載。 利用規約にご同意を頂いた上で 商品内容を熟読された方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 日本国外のサイトで販売されているものは非正規品です。 マルウェアが含まれる可能性があるので購入しないでください。 Those sold at sites outside of Japan are non-genuine. Do not">
+    "3月21～22日の間 期間限定でセールを予定。 【オリジナル3Dモデル】小鬼ちゃん+巨大な筆（鈍器） 紹介文 　制作者　おいたん 小鬼ちゃん Ver1.06 巨大な筆（鈍器） Ver1.03 桜ノ簪（髪飾り） Ver1.04 ※Verの更新の詳細は商品ページの最後に記載。 利用規約にご同意を頂いた上で 商品内容を熟読された方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 日本国外のサイトで販売されているものは非正規品です。 マルウェアが含まれる可能性があるので購入しないでください。 Those sold at sites outside of Japan">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/38889d02-5834-4447-8685-8678865d45c0/i/1229684/68efb733-640f-4456-9876-bfe3f612422e_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル３Dモデル「小鬼ちゃん」Ver1.06+「巨大な筆(鈍器)Ver1.03+墨エフェクト」 - 無計画工房 - BOOTH">
     <meta property="og:description" content=
-    "【オリジナル3Dモデル】小鬼ちゃん+巨大な筆（鈍器） 紹介文 　制作者　おいたん 小鬼ちゃん Ver1.06 巨大な筆（鈍器） Ver1.03 桜ノ簪（髪飾り） Ver1.04 ※Verの更新の詳細は商品ページの最後に記載。 利用規約にご同意を頂いた上で 商品内容を熟読された方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 日本国外のサイトで販売されているものは非正規品です。 マルウェアが含まれる可能性があるので購入しないでください。 Those sold at sites outside of Japan are non-genuine. Do not">
+    "3月21～22日の間 期間限定でセールを予定。 【オリジナル3Dモデル】小鬼ちゃん+巨大な筆（鈍器） 紹介文 　制作者　おいたん 小鬼ちゃん Ver1.06 巨大な筆（鈍器） Ver1.03 桜ノ簪（髪飾り） Ver1.04 ※Verの更新の詳細は商品ページの最後に記載。 利用規約にご同意を頂いた上で 商品内容を熟読された方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 日本国外のサイトで販売されているものは非正規品です。 マルウェアが含まれる可能性があるので購入しないでください。 Those sold at sites outside of Japan">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/38889d02-5834-4447-8685-8678865d45c0/i/1229684/68efb733-640f-4456-9876-bfe3f612422e_base_resized.jpg">
     <meta property="og:url" content=
@@ -50,10 +50,6 @@
     <meta content=
     "[&quot;.jpg&quot;,&quot;.jpeg&quot;,&quot;.gif&quot;,&quot;.png&quot;]"
     name="js_const_image_acceptable_file_types">
-    <meta content="&quot;.pixiv.net&quot;" name=
-    "js_const_pixiv_signup_sdk_origin">
-    <meta content="&quot;https://accounts.pixiv.net/&quot;" name=
-    "js_const_pixiv_signup_sdk_urlbase">
     <meta content=
     "&quot;https://fanbox.pixiv.net/ajax/external&quot;" name=
     "js_const_pixiv_fanbox_endpoint">
@@ -442,6 +438,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
+                            3月21～22日の間 期間限定でセールを予定。
                             【オリジナル3Dモデル】小鬼ちゃん+巨大な筆（鈍器） 紹介文
                             　制作者　おいたん 小鬼ちゃん Ver1.06 巨大な筆（鈍器）
                             Ver1.03 桜ノ簪（髪飾り） Ver1.04
