--- a/VRChat/38/1267938.html
+++ b/VRChat/38/1267938.html
@@ -3,28 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>
-      オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0 - ここほれわんこーぽれーしょん - BOOTH
+      【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0 - ここほれわんこーぽれーしょん -
+      BOOTH
     </title>
     <meta name="description" content=
-    "VRChatでの利用を想定したオリジナル3Dモデル「たれみみわんこのそうちゃん」です！ そうちゃんは、たれみみわんこの優しい女の子です。たくさんかわいがって頂けるとうれしいです！ ★追記2021/10/22： バージョン4.0アップデート公開しました！ VRChatSDK3(Avatars3.0対応)などが含まれますので是非ダウンロードしてご利用ください。">
+    "★★★★　期間限定セール！　★★★★ 期間限定（12/19日曜まで）で1000円引！ よろしければこの機会に是非！ ★★★★★★★★★★★★★★★★★★ VRChatでの利用を想定したオリジナル3Dモデル「たれみみわんこのそうちゃん」です！ そうちゃんは、たれみみわんこの優しい女の子です。たくさんかわいがって頂けるとうれしいです！ ★追記2021/10/22： バージョン4.0アップデート公開しました！ VRChatSDK3(Avatars3.0対応)などが含まれますので是非ダウンロードしてご利用ください。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1267938">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0 - ここほれわんこーぽれーしょん - BOOTH">
+    "【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0 - ここほれわんこーぽれーしょん - BOOTH">
     <meta name="twitter:description" content=
-    "VRChatでの利用を想定したオリジナル3Dモデル「たれみみわんこのそうちゃん」です！ そうちゃんは、たれみみわんこの優しい女の子です。たくさんかわいがって頂けるとうれしいです！ ★追記2021/10/22： バージョン4.0アップデート公開しました！ VRChatSDK3(Avatars3.0対応)などが含まれますので是非ダウンロードしてご利用ください。">
+    "★★★★　期間限定セール！　★★★★ 期間限定（12/19日曜まで）で1000円引！ よろしければこの機会に是非！ ★★★★★★★★★★★★★★★★★★ VRChatでの利用を想定したオリジナル3Dモデル「たれみみわんこのそうちゃん」です！ そうちゃんは、たれみみわんこの優しい女の子です。たくさんかわいがって頂けるとうれしいです！ ★追記2021/10/22： バージョン4.0アップデート公開しました！ VRChatSDK3(Avatars3.0対応)などが含まれますので是非ダウンロードしてご利用ください。">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/87fef25a-bdcc-497a-a601-3c60111b9edf_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/7a0a1815-9c17-48cb-852b-f5a5f2d907e5_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0 - ここほれわんこーぽれーしょん - BOOTH">
+    "【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0 - ここほれわんこーぽれーしょん - BOOTH">
     <meta property="og:description" content=
-    "VRChatでの利用を想定したオリジナル3Dモデル「たれみみわんこのそうちゃん」です！ そうちゃんは、たれみみわんこの優しい女の子です。たくさんかわいがって頂けるとうれしいです！ ★追記2021/10/22： バージョン4.0アップデート公開しました！ VRChatSDK3(Avatars3.0対応)などが含まれますので是非ダウンロードしてご利用ください。">
+    "★★★★　期間限定セール！　★★★★ 期間限定（12/19日曜まで）で1000円引！ よろしければこの機会に是非！ ★★★★★★★★★★★★★★★★★★ VRChatでの利用を想定したオリジナル3Dモデル「たれみみわんこのそうちゃん」です！ そうちゃんは、たれみみわんこの優しい女の子です。たくさんかわいがって頂けるとうれしいです！ ★追記2021/10/22： バージョン4.0アップデート公開しました！ VRChatSDK3(Avatars3.0対応)などが含まれますので是非ダウンロードしてご利用ください。">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/87fef25a-bdcc-497a-a601-3c60111b9edf_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/7a0a1815-9c17-48cb-852b-f5a5f2d907e5_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1267938">
     <meta name="ga:shop" content="UA-134639958-1">
@@ -61,7 +62,7 @@
     <script src=
     "https://asset.booth.pm/assets/168ceedf2030b5bc7718.js" defer=
     "defer" nonce=
-    "tWHp2hJZOYPKCi8rxjgjI9JvlZq9rdRq8Y7qvlqFD7g="></script>
+    "r8crzk2EPmmBH6fWIGV0qhKuwxJ5f1Q+qpqiaUdREyw="></script>
     <script id="shop_with_items" type="text/x-template">
     <div class="shop-card l-card" v-if="shop"><div class="shop-card__box-wrap"><div class="shop-card__box"><div class="shop-card-box-body"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><div class="shop-card__thumbnails"><div class="shop-card__thumbnails--at-left on-white-bg"><img :alt="largeThumbItem.name" :data-original="hideThumbnail(largeThumbItem) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : largeThumbItem.image_url" class="lazyload u-w-100" /></div><div class="shop-card__thumbnails--at-right"><div class="shop-card__thumbnail-wrap on-white-bg" v-for="item in smallThumbItems"><div class="shop-card__thumbnail"><img :alt="item.name" :data-original="hideThumbnail(item) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : item.image_url" class="lazyload u-w-100" /></div></div></div></div></a></div><div class="shop-card__box-footer"><div class="shop-card__owner-info"><div class="shop-card__avatar"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><img :alt="shop.user.nickname" :data-original="shop.user.thumbnail_url" class="lazyload user_avatar-48 mobile-user_avatar-38" height="42" width="42" /></a></div><div class="shop-card__shop-name"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" class="text-ui" target="_blank">{{ shop.name }}</a></div></div><div class="shop-card__actions"><follow-btn :ga-params="gaParams" :shop="shop"></follow-btn></div></div></div></div></div>
     </script>
@@ -74,9 +75,9 @@
     <script src=
     "https://asset.booth.pm/assets/29ed898e9f4c5b54ed1b.js" defer=
     "defer" nonce=
-    "tWHp2hJZOYPKCi8rxjgjI9JvlZq9rdRq8Y7qvlqFD7g="></script>
+    "r8crzk2EPmmBH6fWIGV0qhKuwxJ5f1Q+qpqiaUdREyw="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0","description":"VRChatでの利用を想定したオリジナル3Dモデル「たれみみわんこのそうちゃん」です！\nそうちゃんは、たれみみわんこの優しい女の子です。たくさんかわいがって頂けるとうれしいです！\n\n★追記2021/10/22：\nバージョン4.0アップデート公開しました！\nVRChatSDK3(Avatars3.0対応)などが含まれますので是非ダウンロードしてご利用ください。","url":"https://booth.pm/ja/items/1267938","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1111"},"image":"https://booth.pximg.net/c/620x620/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/87fef25a-bdcc-497a-a601-3c60111b9edf_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0","description":"★★★★　期間限定セール！　★★★★\n期間限定（12/19日曜まで）で1000円引！\nよろしければこの機会に是非！\n★★★★★★★★★★★★★★★★★★\n\n\nVRChatでの利用を想定したオリジナル3Dモデル「たれみみわんこのそうちゃん」です！\nそうちゃんは、たれみみわんこの優しい女の子です。たくさんかわいがって頂けるとうれしいです！\n\n★追記2021/10/22：\nバージョン4.0アップデート公開しました！\nVRChatSDK3(Avatars3.0対応)などが含まれますので是非ダウンロードしてご利用ください。","url":"https://booth.pm/ja/items/1267938","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1111"},"image":"https://booth.pximg.net/c/620x620/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/7a0a1815-9c17-48cb-852b-f5a5f2d907e5_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -91,7 +92,7 @@
     <script src=
     "https://asset.booth.pm/assets/f10f25a0367282c705f4.js" defer=
     "defer" nonce=
-    "tWHp2hJZOYPKCi8rxjgjI9JvlZq9rdRq8Y7qvlqFD7g="></script>
+    "r8crzk2EPmmBH6fWIGV0qhKuwxJ5f1Q+qpqiaUdREyw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -107,7 +108,7 @@
         data-product-price="1111"
         data-shop-tracking-product-category="3D Characters"
         data-shop-tracking-product-id="1267938"
-        data-shop-tracking-product-name="オリジナル3Dモデル　『そうちゃん』 Ver..."
+        data-shop-tracking-product-name="【期間限定セール】オリジナル3Dモデル　『そ..."
         data-shop-tracking-product-price="1111" data-tracking=
         "detail_item">
           <nav>
@@ -173,7 +174,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0
+                          【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0
                         </h2>
                         <div class=
                         "u-text-assertive u-tpg-caption1">
@@ -241,7 +242,7 @@
                           "https://booth.pm/ja/items/1267938"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0 | ここほれわんこーぽれーしょん"
+                          "【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0 | ここほれわんこーぽれーしょん"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -261,20 +262,32 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0" class=
-                            "market-item-detail-item-image"
+                            "【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0"
+                            class="market-item-detail-item-image"
                             data-origin=
-                            "https://booth.pximg.net/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/87fef25a-bdcc-497a-a601-3c60111b9edf.png"
+                            "https://booth.pximg.net/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/7a0a1815-9c17-48cb-852b-f5a5f2d907e5.png"
                             src=
-                            "https://booth.pximg.net/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/87fef25a-bdcc-497a-a601-3c60111b9edf_base_resized.jpg">
+                            "https://booth.pximg.net/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/7a0a1815-9c17-48cb-852b-f5a5f2d907e5_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0" class=
-                            "market-item-detail-item-image"
+                            "【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0"
+                            class="market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/87fef25a-bdcc-497a-a601-3c60111b9edf_base_resized.jpg"
+                            data-origin=
+                            "https://booth.pximg.net/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/87fef25a-bdcc-497a-a601-3c60111b9edf.png">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/cb17c536-048b-4c63-b091-acfae3826a5f_base_resized.jpg"
                             data-origin=
@@ -285,8 +298,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0" class=
-                            "market-item-detail-item-image"
+                            "【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/3c7d810b-9144-4d56-a605-c82e98bcc0f7_base_resized.jpg"
                             data-origin=
@@ -297,8 +310,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0" class=
-                            "market-item-detail-item-image"
+                            "【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/91384f38-39fa-492f-bff3-57d632fd5be5_base_resized.jpg"
                             data-origin=
@@ -309,8 +322,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0" class=
-                            "market-item-detail-item-image"
+                            "【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/52cadbcf-74df-434e-bd29-bc5e37d2672f_base_resized.jpg"
                             data-origin=
@@ -321,8 +334,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0" class=
-                            "market-item-detail-item-image"
+                            "【期間限定セール】オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/42248ac8-12d4-4ec7-a354-ed0758863766_base_resized.jpg"
                             data-origin=
@@ -333,6 +346,10 @@
                       <div class=
                       "primary-image-thumbnails u-d-sp-none">
                         <a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/7a0a1815-9c17-48cb-852b-f5a5f2d907e5_base_resized.jpg">
+                        </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/87fef25a-bdcc-497a-a601-3c60111b9edf_base_resized.jpg">
@@ -362,6 +379,9 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
+                            ★★★★　期間限定セール！　★★★★
+                            期間限定（12/19日曜まで）で1000円引！ よろしければこの機会に是非！
+                            ★★★★★★★★★★★★★★★★★★
                             VRChatでの利用を想定したオリジナル3Dモデル「たれみみわんこのそうちゃん」です！
                             そうちゃんは、たれみみわんこの優しい女の子です。たくさんかわいがって頂けるとうれしいです！
                             ★追記2021/10/22： バージョン4.0アップデート公開しました！
