--- a/VRChat/21/1226021.html
+++ b/VRChat/21/1226021.html
@@ -66,9 +66,9 @@
     <script src=
     "https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js"
     defer="defer" nonce=
-    "KyLJwcaFlfDhOYPVVhNSkdKcRHADVy1wMnTpK+7+DP4="></script>
+    "fUUBe/uPWdjTj1zGccKnO/QZ2OHmh2iBp7XHjXj40MQ="></script>
     <script src="https://asset.booth.pm/twitter.js" defer="defer"
-    nonce="KyLJwcaFlfDhOYPVVhNSkdKcRHADVy1wMnTpK+7+DP4="></script>
+    nonce="fUUBe/uPWdjTj1zGccKnO/QZ2OHmh2iBp7XHjXj40MQ="></script>
     <script id="follow_btn" type="text/x-template">
     <div class="following-shop__action-box" v-if="shop"><template v-if="userSignedIn"><a @click="unfollow" class="btn small u-px-sp-600 unfollow-action" v-if="shop.following"><span class="cmd-label">フォロー中</span></a><a @click="follow" class="btn small u-px-sp-600 follow-action" v-else=""><span class="cmd-label">フォロー</span></a></template><template v-else=""><a :href="shop.follow_path" @click="sendAnalyticsEvent(&quot;follow&quot;)" class="btn small u-px-sp-600 follow-action" data-method="post"><span class="cmd-label">フォロー</span></a></template></div>
     </script>
@@ -78,27 +78,49 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
+  </head>
+  <body>
+    <div class="mini-player-controller" style="display: none;">
+      <a class="scroller" data-smooth-scroll="true"><img class=
+      "mini-player-controller__image" src=
+      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
+      data-smooth-scroll="true">
+      <div class="mini-player-information__item-name"></div>
+      <div class="mini-player-information__shop-name"></div>
+      <div class="mini-player-information__navigation">
+        試聴中の商品へスクロール
+      </div></a>
+      <div class="mini-player-controls">
+        <div class="mini-player-mode-ui">
+          <div class="mini-player-mode-ui__knob"></div>
+          <div class="mini-player-mode-ui__short">
+            15秒
+          </div>
+          <div class="mini-player-mode-ui__full">
+            フル
+          </div>
+        </div>
+        <div class="mini-player-play-ui"></div>
+      </div>
+    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
     "https://asset.booth.pm/assets/f2f088dd9bcf06fc6978.js" defer=
     "defer" nonce=
-    "KyLJwcaFlfDhOYPVVhNSkdKcRHADVy1wMnTpK+7+DP4="></script>
+    "fUUBe/uPWdjTj1zGccKnO/QZ2OHmh2iBp7XHjXj40MQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ディスクサイズ","description":"通常、刀は刃の反りを利用して対象を撫で斬りにするが、この武器は逆向きに反った刃を利用し、相手の肉体に余すことなく力を伝達させ首や胴体を切断する。\n\n------------------------------\n\nこちらはVRChatを想定して作られた、「ディスクサイズ」のFBXモデルです。\n\n\nモデルデータはunitypackage形式です。\n\nディスク部分にはボーンが入っているため、回転させることが可能です。予めアニメーションを組み込んでいるため、Prefabをそのまま読み込むことで、設定無しでディスクが回転します。\n\nマテリアルのAlbedoとEmissionのColorを変更することで、ディスク、刀身の白い部分の色をUnity上の操作だけで自由に変更することが出来ます。\n\n\n\n-----利用規約-----\n・素材そのものの再配布、及び販売は禁止とさせていただきます。\n・それ以外は原則自由に使っていただいて構いませんが、予告なく規約が変更になる可能性があります。\n・規約は常に商品紹介文に記載されているものを最新の規約とします。\n・当商品を購入、使用して発生したトラブル等に関して、当方は一切の責任を負いません。\n\n----------\n最終更新日：2019/03/10","url":"https://booth.pm/ja/items/1226021","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/7daba49c-946f-44ee-9363-049475872f48/i/1226021/3deaac31-0bdf-48ed-a511-66701fd92bfe_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed">
-  </head>
-  <body>
-    <noscript><iframe height="0" src=
-    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed"><noscript><iframe height="0"
+    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KyLJwcaFlfDhOYPVVhNSkdKcRHADVy1wMnTpK+7+DP4="></script>
+    nonce="fUUBe/uPWdjTj1zGccKnO/QZ2OHmh2iBp7XHjXj40MQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
