updated at: 2022-06-03 21:23, 【U10mk2】ver.5.0 - KinderGarten21／常世界機構 - BOOTH

--- a/VRChat/03/1215303.html
+++ b/VRChat/03/1215303.html
@@ -7,7 +7,7 @@
       【U10mk2】ver.5.0 - KinderGarten21／常世界機構 - BOOTH
     </title>
     <meta name="description" content=
-    "---------------------------------------- ※ver.5.0よりPhysBone対応となりました※ ※シェーダーの同梱を廃止しました。unity packageのインポート前に必要なシェーダーを導入してください※ 使用しているシェーダーは以下の通りです。 「ArxCharacterShaders」 https://packetbird.booth.pm/items/2493539 「ユニティちゃんトゥーンシェーダー2.0」 https://unity-chan.com　右上のDATA DOWNLOADから進んだ先。">
+    "---------------------------------------- ※商品画像を新しくする余裕がなく、旧ver.の画像が含まれています※ ※ver.5.0よりPhysBone対応となりました※ ※シェーダーの同梱を廃止しました。unity packageのインポート前に必要なシェーダーを導入してください※ 使用しているシェーダーは以下の通りです。 「ArxCharacterShaders」 https://packetbird.booth.pm/items/2493539 「ユニティちゃんトゥーンシェーダー2.0」 https://unity-chan.com　右上のDATA">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1215303">
@@ -16,14 +16,14 @@
     <meta name="twitter:title" content=
     "【U10mk2】ver.5.0 - KinderGarten21／常世界機構 - BOOTH">
     <meta name="twitter:description" content=
-    "---------------------------------------- ※ver.5.0よりPhysBone対応となりました※ ※シェーダーの同梱を廃止しました。unity packageのインポート前に必要なシェーダーを導入してください※ 使用しているシェーダーは以下の通りです。 「ArxCharacterShaders」 https://packetbird.booth.pm/items/2493539 「ユニティちゃんトゥーンシェーダー2.0」 https://unity-chan.com　右上のDATA DOWNLOADから進んだ先。">
+    "---------------------------------------- ※商品画像を新しくする余裕がなく、旧ver.の画像が含まれています※ ※ver.5.0よりPhysBone対応となりました※ ※シェーダーの同梱を廃止しました。unity packageのインポート前に必要なシェーダーを導入してください※ 使用しているシェーダーは以下の通りです。 「ArxCharacterShaders」 https://packetbird.booth.pm/items/2493539 「ユニティちゃんトゥーンシェーダー2.0」 https://unity-chan.com　右上のDATA">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1215303/45247170-2bb8-4158-b29b-013fa990b8af_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【U10mk2】ver.5.0 - KinderGarten21／常世界機構 - BOOTH">
     <meta property="og:description" content=
-    "---------------------------------------- ※ver.5.0よりPhysBone対応となりました※ ※シェーダーの同梱を廃止しました。unity packageのインポート前に必要なシェーダーを導入してください※ 使用しているシェーダーは以下の通りです。 「ArxCharacterShaders」 https://packetbird.booth.pm/items/2493539 「ユニティちゃんトゥーンシェーダー2.0」 https://unity-chan.com　右上のDATA DOWNLOADから進んだ先。">
+    "---------------------------------------- ※商品画像を新しくする余裕がなく、旧ver.の画像が含まれています※ ※ver.5.0よりPhysBone対応となりました※ ※シェーダーの同梱を廃止しました。unity packageのインポート前に必要なシェーダーを導入してください※ 使用しているシェーダーは以下の通りです。 「ArxCharacterShaders」 https://packetbird.booth.pm/items/2493539 「ユニティちゃんトゥーンシェーダー2.0」 https://unity-chan.com　右上のDATA">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1215303/45247170-2bb8-4158-b29b-013fa990b8af_base_resized.jpg">
     <meta property="og:url" content=
@@ -68,9 +68,9 @@
     <script src=
     "https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js"
     defer="defer" nonce=
-    "/FRz8JWkDEyDk1N7ZA8/40oUt6xhBNUKH/jnbnNjlmo="></script>
+    "83yZF+/LLZJs/eekta2b5fUTkPknfdS/mL4XBfoDVqg="></script>
     <script src="https://asset.booth.pm/twitter.js" defer="defer"
-    nonce="/FRz8JWkDEyDk1N7ZA8/40oUt6xhBNUKH/jnbnNjlmo="></script>
+    nonce="83yZF+/LLZJs/eekta2b5fUTkPknfdS/mL4XBfoDVqg="></script>
     <script id="follow_btn" type="text/x-template">
     <div class="following-shop__action-box" v-if="shop"><template v-if="userSignedIn"><a @click="unfollow" class="btn small u-px-sp-600 unfollow-action" v-if="shop.following"><span class="cmd-label">フォロー中</span></a><a @click="follow" class="btn small u-px-sp-600 follow-action" v-else=""><span class="cmd-label">フォロー</span></a></template><template v-else=""><a :href="shop.follow_path" @click="sendAnalyticsEvent(&quot;follow&quot;)" class="btn small u-px-sp-600 follow-action" data-method="post"><span class="cmd-label">フォロー</span></a></template></div>
     </script>
@@ -86,9 +86,9 @@
     <script src=
     "https://asset.booth.pm/assets/f2f088dd9bcf06fc6978.js" defer=
     "defer" nonce=
-    "/FRz8JWkDEyDk1N7ZA8/40oUt6xhBNUKH/jnbnNjlmo="></script>
+    "83yZF+/LLZJs/eekta2b5fUTkPknfdS/mL4XBfoDVqg="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"【U10mk2】ver.5.0","description":"----------------------------------------\n※ver.5.0よりPhysBone対応となりました※\n※シェーダーの同梱を廃止しました。unity packageのインポート前に必要なシェーダーを導入してください※\n\n使用しているシェーダーは以下の通りです。\n\n「ArxCharacterShaders」\nhttps://packetbird.booth.pm/items/2493539\n\n「ユニティちゃんトゥーンシェーダー2.0」\nhttps://unity-chan.com　右上のDATA DOWNLOADから進んだ先。\n----------------------------------------\n\n常なるこの世を維持する【常世界機構】が管理保有する\n汎用人型自立稼働システムU10のmk2です。\n対甲種想定の中・遠距離兵装となります。\n\nメカ娘プラモみたいな感じでいろいろ盛ったり交換したりして遊んでもらえたらなぁと思って作りました。\nぜひ好きな装備をつけたりして遊んであげてください。\n\nVRchat内のワールドにて試着が可能です。\n「U10's Avatar World」で検索してください。\n\nリップシンク・フルトラッキング・アイトラッキング対応／約50,000ポリゴン（+パーティクル）／Arktoon＆ユニティちゃんトゥーンシェーダー使用です。 \n\n VRchat用にセットアップ済みのモデル／QUEST用シェーダーに対応した1メッシュモデル／VRMモデル／cluster対応VRM／改変用PSDデータ／改変用blenderデータが同梱されています。\n\nVRChat内のワールドにて試着をすることが可能です。 https://www.vrchat.com/home/launch?worldId=wrld_12ca024e-3ae8-4966-bf2f-c0621f622568\n\nVRM版／clster対応版の挙動はVRoidHubにて確認できます。\nhttps://hub.vroid.com/characters/8418132338996756774","url":"https://booth.pm/ja/items/1215303","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"5000"},"image":"https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1215303/45247170-2bb8-4158-b29b-013fa990b8af_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"【U10mk2】ver.5.0","description":"----------------------------------------\n※商品画像を新しくする余裕がなく、旧ver.の画像が含まれています※\n※ver.5.0よりPhysBone対応となりました※\n※シェーダーの同梱を廃止しました。unity packageのインポート前に必要なシェーダーを導入してください※\n\n使用しているシェーダーは以下の通りです。\n\n「ArxCharacterShaders」\nhttps://packetbird.booth.pm/items/2493539\n\n「ユニティちゃんトゥーンシェーダー2.0」\nhttps://unity-chan.com　右上のDATA DOWNLOADから進んだ先。\n----------------------------------------\n\n常なるこの世を維持する【常世界機構】が管理保有する\n汎用人型自立稼働システムU10のmk2です。\n対甲種想定の中・遠距離兵装となります。\n\nメカ娘プラモみたいな感じでいろいろ盛ったり交換したりして遊んでもらえたらなぁと思って作りました。\nぜひ好きな装備をつけたりして遊んであげてください。\n\nVRchat内のワールドにて試着が可能です。\n「U10's Avatar World」で検索してください。\n\nリップシンク・フルトラッキング・アイトラッキング対応／約50,000ポリゴン（+パーティクル）／Arktoon＆ユニティちゃんトゥーンシェーダー使用です。 \n\n VRchat用にセットアップ済みのモデル／QUEST用シェーダーに対応した1メッシュモデル／VRMモデル／cluster対応VRM／改変用PSDデータ／改変用blenderデータが同梱されています。\n\nVRChat内のワールドにて試着をすることが可能です。 https://www.vrchat.com/home/launch?worldId=wrld_12ca024e-3ae8-4966-bf2f-c0621f622568\n\nVRM版／clster対応版の挙動はVRoidHubにて確認できます。\nhttps://hub.vroid.com/characters/8418132338996756774","url":"https://booth.pm/ja/items/1215303","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"5000"},"image":"https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1215303/45247170-2bb8-4158-b29b-013fa990b8af_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -100,7 +100,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/FRz8JWkDEyDk1N7ZA8/40oUt6xhBNUKH/jnbnNjlmo="></script>
+    nonce="83yZF+/LLZJs/eekta2b5fUTkPknfdS/mL4XBfoDVqg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -445,6 +445,7 @@
                         "js-market-item-detail-description description">
                           <p class="autolink u-text-wrap">
                             ----------------------------------------
+                            ※商品画像を新しくする余裕がなく、旧ver.の画像が含まれています※
                             ※ver.5.0よりPhysBone対応となりました※
                             ※シェーダーの同梱を廃止しました。unity
                             packageのインポート前に必要なシェーダーを導入してください※
