updated at: 2022-06-04 17:29, 【U10prototype】ver.5.0 - KinderGarten21／常世界機構 - BOOTH

--- a/VRChat/52/1131052.html
+++ b/VRChat/52/1131052.html
@@ -68,9 +68,9 @@
     <script src=
     "https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js"
     defer="defer" nonce=
-    "TCmYM2Bh6xWrlyxnJh+aSIlIlm3grI+GHwpn7pqGxZA="></script>
+    "b6WFc6XXXyiPYxOdv9TFS2Y2O/BdiqqKhK9lV1Jpmzc="></script>
     <script src="https://asset.booth.pm/twitter.js" defer="defer"
-    nonce="TCmYM2Bh6xWrlyxnJh+aSIlIlm3grI+GHwpn7pqGxZA="></script>
+    nonce="b6WFc6XXXyiPYxOdv9TFS2Y2O/BdiqqKhK9lV1Jpmzc="></script>
     <script id="follow_btn" type="text/x-template">
     <div class="following-shop__action-box" v-if="shop"><template v-if="userSignedIn"><a @click="unfollow" class="btn small u-px-sp-600 unfollow-action" v-if="shop.following"><span class="cmd-label">フォロー中</span></a><a @click="follow" class="btn small u-px-sp-600 follow-action" v-else=""><span class="cmd-label">フォロー</span></a></template><template v-else=""><a :href="shop.follow_path" @click="sendAnalyticsEvent(&quot;follow&quot;)" class="btn small u-px-sp-600 follow-action" data-method="post"><span class="cmd-label">フォロー</span></a></template></div>
     </script>
@@ -111,7 +111,7 @@
     <script src=
     "https://asset.booth.pm/assets/f2f088dd9bcf06fc6978.js" defer=
     "defer" nonce=
-    "TCmYM2Bh6xWrlyxnJh+aSIlIlm3grI+GHwpn7pqGxZA="></script>
+    "b6WFc6XXXyiPYxOdv9TFS2Y2O/BdiqqKhK9lV1Jpmzc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【U10prototype】ver.5.0","description":"----------------------------------------\n※シェーダーの同梱を廃止しました。unity packageのインポート前に必要なシェーダーを導入してください※\n\n「ArxCharacterShaders」\nhttps://packetbird.booth.pm/items/2493539\n\n「ユニティちゃんトゥーンシェーダー2.0」\nhttps://unity-chan.com　右上のDATA DOWNLOADから進んだ先。\n----------------------------------------\n\n\nオリジナルの3Dモデル、\n量産型アンドロイドのU10です。\nU10と書いて「ユト」と読みます。\n※VRchatの公式アバターリストに置いてあるものとはちょっとだけ仕様が違います。\n\nPCおよびQUESTでパフォーマンスランクがExcellentになるよう、ver.5.0にて大幅な改修を行いました。QUESTでもメカ手脚の女の子を楽しめます！（人型の腕とメカ腕を選べます）ぜひFallback Avatarとしてご利用ください。\n\nパフォーマンス重視のため揺れ物などは特に設定されていませんが、髪の毛に簡易ボーンが入っているので一応揺らすことはできます。PhysBone設定済みのプレハブを同梱しています（パフォーマンスランクはPCでGood）\n\nとても軽いので、大体どのサービスでもアバターとして利用することができると思います！\n\nver.5.0現在、VRM版は同梱されていません。後日追加予定です。","url":"https://booth.pm/ja/items/1131052","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1131052/9af878f2-491c-48c8-aff2-4bd342a8b2ed_base_resized.jpg"}
     </script>
@@ -122,7 +122,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TCmYM2Bh6xWrlyxnJh+aSIlIlm3grI+GHwpn7pqGxZA="></script>
+    nonce="b6WFc6XXXyiPYxOdv9TFS2Y2O/BdiqqKhK9lV1Jpmzc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -242,9 +242,9 @@
                                     <div class="cart-button-wrap">
                                       <a class=
                                       "btn add-cart full-length"
-                                      title="U10PT_ver.5.0beta.zip"
+                                      title="U10PT_ver.5.0.zip"
                                       href=
-                                      "https://booth.pm/downloadables/2551364">
+                                      "https://booth.pm/downloadables/2556493">
                                       <div class="u-d-block">
                                         <span class=
                                         "cmd-label">無料ダウンロード</span>
@@ -253,7 +253,7 @@
                                       "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                         <div class=
                                         "u-text-ellipsis u-max-w-50">
-                                          U10PT_ver.5.0beta
+                                          U10PT_ver.5.0
                                         </div>
                                         <div>
                                           .zip
