--- a/VRChat/42/1296842.html
+++ b/VRChat/42/1296842.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1296842">
     <meta name="robots" content="max-image-preview:large">
-    <meta name="ga:shop" content="">
+    <meta name="ga:shop" content="G-HE8QV4GCDC">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -68,9 +68,9 @@
     <script src=
     "https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js"
     defer="defer" nonce=
-    "B1mivQ3ZHVU6YYn7Lh38isbzXEato1QdLtjJjR2MSgc="></script>
+    "RmcbZzqQNVvMN1YnX06oKYgpfrRiRJfNNLqF8gOa64k="></script>
     <script src="https://asset.booth.pm/twitter.js" defer="defer"
-    nonce="B1mivQ3ZHVU6YYn7Lh38isbzXEato1QdLtjJjR2MSgc="></script>
+    nonce="RmcbZzqQNVvMN1YnX06oKYgpfrRiRJfNNLqF8gOa64k="></script>
     <script id="follow_btn" type="text/x-template">
     <div class="following-shop__action-box" v-if="shop"><template v-if="userSignedIn"><a @click="unfollow" class="btn small u-px-sp-600 unfollow-action" v-if="shop.following"><span class="cmd-label">フォロー中</span></a><a @click="follow" class="btn small u-px-sp-600 follow-action" v-else=""><span class="cmd-label">フォロー</span></a></template><template v-else=""><a :href="shop.follow_path" @click="sendAnalyticsEvent(&quot;follow&quot;)" class="btn small u-px-sp-600 follow-action" data-method="post"><span class="cmd-label">フォロー</span></a></template></div>
     </script>
@@ -86,7 +86,7 @@
     <script src=
     "https://asset.booth.pm/assets/f2f088dd9bcf06fc6978.js" defer=
     "defer" nonce=
-    "B1mivQ3ZHVU6YYn7Lh38isbzXEato1QdLtjJjR2MSgc="></script>
+    "RmcbZzqQNVvMN1YnX06oKYgpfrRiRJfNNLqF8gOa64k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCCamController","description":"# VRCCamController\nVRChat にアバターをアップロードするときの Upload Image に指定した画像を表示させるのを簡単にするスクリプトと、そのスクリプトをくっつけたプレハブです。\n\n## 使い方\n1. ダウンロードした zip ファイルを解凍して出てくる `VRCCamController.unitypackage` を実行して、 Unity へファイルを読み込んでください\n2. 読み込まれた `Assets/Plugins/KmnkTools/VRCCamController/VRCCamController` のプレハブ（青い立方体のアイコン）をアップロード用のモデルを設定しているシーンにドラッグアンドドロップしてください\n3. 表示したい画像を用意して、 Unity の `Project` タブのどこかに放り込んで読み込ませてください\n4. 読み込まれた画像を選択すると `Inspector` タブに詳細設定が表示されるので、 `Texture Type` を `Sprite (2D and UI)` に設定して、 `Apply` を押して適用してください\n5. `Hierarchy` タブで 2 でシーンに置いた `VRCCamController` を選択して `Inspector` タブの `Image Sprite` に準備した画像をドラッグアンドロップしてください \n6. 普段モデルをアップロードする時のように `VRChat` タブの `Buld \u0026 Publish` を押して、 `Game` タブに表示される UI の `Upload Image` にチェックを入れると、指定した画像が表示されるはずなので、 `VRCCamController` の `Size` で大きさを調整してください\n7. 良い感じになったら、いつもどおりアップロードしてください\n\n## 何をしているのか\nアップロード用のスクリーンショットを撮るカメラ（ `VRCCam` ）を探して、ちょっとそれっぽく設定をいじっているだけです。  \nですので、手動でも同じことはできます。あくまで、簡単化のスクリプトです。\n\n## その他\n- もしご要望があれば、お知らせいただければできる範囲で対応します\n- 簡単なことしかやっていないので、適当に改造して使ってみてください\n- もし追加したい機能差分があれば [Github リポジトリ](https://github.com/kmnk/VRCCamController) に PullRequest して頂ければ確認します\n\n## License\nMIT License","url":"https://booth.pm/ja/items/1296842","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5732517f-498d-45e3-b6b7-fd8ead6991fd/i/1296842/a9972edc-a6d8-45e3-bef4-7682ed4c368a_base_resized.jpg"}
     </script>
@@ -100,7 +100,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="B1mivQ3ZHVU6YYn7Lh38isbzXEato1QdLtjJjR2MSgc="></script>
+    nonce="RmcbZzqQNVvMN1YnX06oKYgpfrRiRJfNNLqF8gOa64k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -109,11 +109,14 @@
         <div class="recaptcha-tag" data-action=
         "booth/checkout_order" data-site-key=
         "6LfF1dcZAAAAAOHQX8v16MX5SktDwmQINVD_6mBF"></div>
-        <div class="market" data-ga-tracking-id=""
+        <div class="market" data-ga-tracking-id="G-HE8QV4GCDC"
         data-product-brand="khmanekon" data-product-category="62"
         data-product-id="1296842" data-product-list="market_show"
-        data-product-price="0" data-tracking="detail_item" id=
-        "items">
+        data-product-price="0" data-shop-tracking-product-category=
+        "Computer Games" data-shop-tracking-product-id="1296842"
+        data-shop-tracking-product-name="VRCCamController"
+        data-shop-tracking-product-price="0" data-tracking=
+        "detail_item" id="items">
           <div class="market"></div>
           <nav>
             <div class=
