updated at: 2022-06-20 17:33, 【3Dアバター用】女性アバター素体ボディ[Ver.13] - TOY-BOX - BOOTH

--- a/VRChat/56/970356.html
+++ b/VRChat/56/970356.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      【3Dアバター用】女性アバター素体ボディ[Ver.12] - TOY-BOX - BOOTH
+      【3Dアバター用】女性アバター素体ボディ[Ver.13] - TOY-BOX - BOOTH
     </title>
     <meta name="description" content=
     "3Dアバター制作用の女性型素体ボディです。 改変・パーツ流用にお使い下さい。 商用・非商用問わずご利用可能です。 　 ◆禁止事項◆ このモデルに関する禁止事項はひとつだけです。 『未加工での再配布・販売を禁じます』 　※著作権は放棄しておりません。 クレジット表記の必要はありませんが、表記していただけると作者が喜びますw もし表記していただける場合は↓このように書いていただけると嬉しいです。 作者名:『倭文』『しとり』『sitori』のいずれか Twitter:@toy_box_sitori HP：http://toy-box.link ◆同梱データ◆ ・blenderデータ ・fbxデータ">
@@ -14,18 +14,18 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【3Dアバター用】女性アバター素体ボディ[Ver.12] - TOY-BOX - BOOTH">
+    "【3Dアバター用】女性アバター素体ボディ[Ver.13] - TOY-BOX - BOOTH">
     <meta name="twitter:description" content=
     "3Dアバター制作用の女性型素体ボディです。 改変・パーツ流用にお使い下さい。 商用・非商用問わずご利用可能です。 　 ◆禁止事項◆ このモデルに関する禁止事項はひとつだけです。 『未加工での再配布・販売を禁じます』 　※著作権は放棄しておりません。 クレジット表記の必要はありませんが、表記していただけると作者が喜びますw もし表記していただける場合は↓このように書いていただけると嬉しいです。 作者名:『倭文』『しとり』『sitori』のいずれか Twitter:@toy_box_sitori HP：http://toy-box.link ◆同梱データ◆ ・blenderデータ ・fbxデータ">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/483d7905-d263-4f44-8244-b6b553a3c620_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/1eafdfe5-9c98-41a1-80a5-9725c0252c8f_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【3Dアバター用】女性アバター素体ボディ[Ver.12] - TOY-BOX - BOOTH">
+    "【3Dアバター用】女性アバター素体ボディ[Ver.13] - TOY-BOX - BOOTH">
     <meta property="og:description" content=
     "3Dアバター制作用の女性型素体ボディです。 改変・パーツ流用にお使い下さい。 商用・非商用問わずご利用可能です。 　 ◆禁止事項◆ このモデルに関する禁止事項はひとつだけです。 『未加工での再配布・販売を禁じます』 　※著作権は放棄しておりません。 クレジット表記の必要はありませんが、表記していただけると作者が喜びますw もし表記していただける場合は↓このように書いていただけると嬉しいです。 作者名:『倭文』『しとり』『sitori』のいずれか Twitter:@toy_box_sitori HP：http://toy-box.link ◆同梱データ◆ ・blenderデータ ・fbxデータ">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/483d7905-d263-4f44-8244-b6b553a3c620_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/1eafdfe5-9c98-41a1-80a5-9725c0252c8f_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/970356">
     <meta name="robots" content="max-image-preview:large">
@@ -68,9 +68,9 @@
     <script src=
     "https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js"
     defer="defer" nonce=
-    "75YFflg2qDva+tWWRvRzbfLvdySqnfxoYrXM3WMyf+U="></script>
+    "sjfJBU35BwFth0Ge05qybfoEqANl323EbydpUblwsRg="></script>
     <script src="https://asset.booth.pm/twitter.js" defer="defer"
-    nonce="75YFflg2qDva+tWWRvRzbfLvdySqnfxoYrXM3WMyf+U="></script>
+    nonce="sjfJBU35BwFth0Ge05qybfoEqANl323EbydpUblwsRg="></script>
     <script id="follow_btn" type="text/x-template">
     <div class="following-shop__action-box" v-if="shop"><template v-if="userSignedIn"><a @click="unfollow" class="btn small u-px-sp-600 unfollow-action" v-if="shop.following"><span class="cmd-label">フォロー中</span></a><a @click="follow" class="btn small u-px-sp-600 follow-action" v-else=""><span class="cmd-label">フォロー</span></a></template><template v-else=""><a :href="shop.follow_path" @click="sendAnalyticsEvent(&quot;follow&quot;)" class="btn small u-px-sp-600 follow-action" data-method="post"><span class="cmd-label">フォロー</span></a></template></div>
     </script>
@@ -109,11 +109,11 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/d0fecbd8c2ea7d4d76ef.js" defer=
+    "https://asset.booth.pm/assets/f71306e18713e08e41da.js" defer=
     "defer" nonce=
-    "75YFflg2qDva+tWWRvRzbfLvdySqnfxoYrXM3WMyf+U="></script>
+    "sjfJBU35BwFth0Ge05qybfoEqANl323EbydpUblwsRg="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"【3Dアバター用】女性アバター素体ボディ[Ver.12]","description":"3Dアバター制作用の女性型素体ボディです。\n改変・パーツ流用にお使い下さい。\n商用・非商用問わずご利用可能です。\n\n　\n◆禁止事項◆\nこのモデルに関する禁止事項はひとつだけです。\n\n『未加工での再配布・販売を禁じます』\n　※著作権は放棄しておりません。\n\nクレジット表記の必要はありませんが、表記していただけると作者が喜びますw\n\nもし表記していただける場合は↓このように書いていただけると嬉しいです。\n\n作者名:『倭文』『しとり』『sitori』のいずれか\nTwitter:@toy_box_sitori\nHP：http://toy-box.link\n\n◆同梱データ◆\n\n・blenderデータ\n・fbxデータ\n・objデータ\n\n◆モデルに関する問題点やご指摘がありましたら◆\n\ntwitter: @toy_box_sitori\nメールアドレス: booth@toy-box.link\nまでご一報下さい。\n\n\n\n◆修正履歴◆\n◇2021.09.10◇\n新しく制作したVer12をアップしました。\n\n◇2021.03.18◇\n新しく制作したVer11をアップしました。\n\n◇2020.09.22◇\n新しく制作したVer10をアップしました。\n\n◇2020.03.13◇\n新しく制作したVer9をアップしました。\n\n◇2019.08.28◇\n新しくトポロジーを調整しなおしたVer8をアップしました。\n\n◇2019.04.30◇\n新モデル制作の際のバランス調整等を反映したVer7をアップしました。オマケとしてローポリモデルも同梱。\n\n◇2019.02.26◇\n腰周りと股関節がより綺麗に曲がるようトポロジーを修正しました。(Ver.6)\n\n◇2019.02.20◇\n細部を変更したVer.5、更に肩関節を球体関節に変更した2パターンのVer.5を同梱しました。\n\n◇2019.01.20◇\n細部を変更したVer.4を同梱しました。\n\n◇2018.12.02◇\nこのデータを元に制作した着せ替えアバターSTRCOS-002からフィードバックしたVer.3を同梱しました。\n\n◇2018.11.25◇\n制作したアバター『嵩宮朱莉』の肩周り、腿の付け根等をフィードバックしたVer.2を同梱しました。\n\n◇2018.10.31◇\nVer.1.6.0 オマケデータとして、顔モデリング用のテンプレートデータを同梱しました。\n汎用性が高いトポロジが組めたと思うので、顔部分を新しく作り直す時に重宝すると思います。\n使い方は\nhttps://twitter.com/toy_box_sitori/status/1057553100452425728\n↑こちらの動画を参考にしてください。\n\n◇2018.08.20◇\nVer.1.5.5 サイズ不具合の修正版アップ\n\n◇2018.08.19◇\nVer.1.5.0 オマケデータ追加\nハイポリモデル生成用の手と足のモデルです。\nBlenderでいうサブサーフェス(細分割曲面)モディファイアを適用した状態でモデリングする為にポリゴン数を抑えたデータになります。\nBlenderファイルとobjファイルがありますが、objファイルはそれぞれお使いの3DCGファイルに読み込んだ後、サブサーフェス(細分割曲面)系のモディファイアを適用してご使用下さい。\n \n\n◇2018.07.16◇\nVer.1.0.0 販売開始","url":"https://booth.pm/ja/items/970356","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/483d7905-d263-4f44-8244-b6b553a3c620_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"【3Dアバター用】女性アバター素体ボディ[Ver.13]","description":"3Dアバター制作用の女性型素体ボディです。\n改変・パーツ流用にお使い下さい。\n商用・非商用問わずご利用可能です。\n\n　\n◆禁止事項◆\nこのモデルに関する禁止事項はひとつだけです。\n\n『未加工での再配布・販売を禁じます』\n　※著作権は放棄しておりません。\n\nクレジット表記の必要はありませんが、表記していただけると作者が喜びますw\n\nもし表記していただける場合は↓このように書いていただけると嬉しいです。\n\n作者名:『倭文』『しとり』『sitori』のいずれか\nTwitter:@toy_box_sitori\nHP：http://toy-box.link\n\n◆同梱データ◆\n\n・blenderデータ\n・fbxデータ\n・objデータ\n\n◆モデルに関する問題点やご指摘がありましたら◆\n\ntwitter: @toy_box_sitori\nメールアドレス: booth@toy-box.link\nまでご一報下さい。\n\n\n\n◆修正履歴◆\n◇2022.06.19◇\n新しく制作したVer13をアップしました。\n\n◇2021.09.10◇\n新しく制作したVer12をアップしました。\n\n◇2021.03.18◇\n新しく制作したVer11をアップしました。\n\n◇2020.09.22◇\n新しく制作したVer10をアップしました。\n\n◇2020.03.13◇\n新しく制作したVer9をアップしました。\n\n◇2019.08.28◇\n新しくトポロジーを調整しなおしたVer8をアップしました。\n\n◇2019.04.30◇\n新モデル制作の際のバランス調整等を反映したVer7をアップしました。オマケとしてローポリモデルも同梱。\n\n◇2019.02.26◇\n腰周りと股関節がより綺麗に曲がるようトポロジーを修正しました。(Ver.6)\n\n◇2019.02.20◇\n細部を変更したVer.5、更に肩関節を球体関節に変更した2パターンのVer.5を同梱しました。\n\n◇2019.01.20◇\n細部を変更したVer.4を同梱しました。\n\n◇2018.12.02◇\nこのデータを元に制作した着せ替えアバターSTRCOS-002からフィードバックしたVer.3を同梱しました。\n\n◇2018.11.25◇\n制作したアバター『嵩宮朱莉』の肩周り、腿の付け根等をフィードバックしたVer.2を同梱しました。\n\n◇2018.10.31◇\nVer.1.6.0 オマケデータとして、顔モデリング用のテンプレートデータを同梱しました。\n汎用性が高いトポロジが組めたと思うので、顔部分を新しく作り直す時に重宝すると思います。\n使い方は\nhttps://twitter.com/toy_box_sitori/status/1057553100452425728\n↑こちらの動画を参考にしてください。\n\n◇2018.08.20◇\nVer.1.5.5 サイズ不具合の修正版アップ\n\n◇2018.08.19◇\nVer.1.5.0 オマケデータ追加\nハイポリモデル生成用の手と足のモデルです。\nBlenderでいうサブサーフェス(細分割曲面)モディファイアを適用した状態でモデリングする為にポリゴン数を抑えたデータになります。\nBlenderファイルとobjファイルがありますが、objファイルはそれぞれお使いの3DCGファイルに読み込んだ後、サブサーフェス(細分割曲面)系のモディファイアを適用してご使用下さい。\n \n\n◇2018.07.16◇\nVer.1.0.0 販売開始","url":"https://booth.pm/ja/items/970356","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/1eafdfe5-9c98-41a1-80a5-9725c0252c8f_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -122,7 +122,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="75YFflg2qDva+tWWRvRzbfLvdySqnfxoYrXM3WMyf+U="></script>
+    nonce="sjfJBU35BwFth0Ge05qybfoEqANl323EbydpUblwsRg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -194,7 +194,7 @@
                           </div>
                           <h2 class=
                           "u-tpg-title1 u-mt-0 u-text-wrap u-mb-400">
-                            【3Dアバター用】女性アバター素体ボディ[Ver.12]
+                            【3Dアバター用】女性アバター素体ボディ[Ver.13]
                           </h2>
                           <div class=
                           "u-text-assertive u-tpg-caption1"></div>
@@ -261,7 +261,7 @@
                             "https://booth.pm/ja/items/970356"
                             data-lang="ja" data-hashtags="booth_pm"
                             data-text=
-                            "【3Dアバター用】女性アバター素体ボディ[Ver.12] | TOY-BOX"
+                            "【3Dアバター用】女性アバター素体ボディ[Ver.13] | TOY-BOX"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
@@ -287,34 +287,34 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.12]"
+                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.13]"
                             class="market-item-detail-item-image"
                             data-origin=
-                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/483d7905-d263-4f44-8244-b6b553a3c620.png"
+                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/1eafdfe5-9c98-41a1-80a5-9725c0252c8f.png"
                             src=
-                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/483d7905-d263-4f44-8244-b6b553a3c620_base_resized.jpg">
+                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/1eafdfe5-9c98-41a1-80a5-9725c0252c8f_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.12]"
+                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.13]"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/5a18dd1c-3fea-4782-adcd-92e8e4ca9d06_base_resized.jpg"
+                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/b645c3da-7c35-47da-a9a2-9721d761cfdd_base_resized.jpg"
                             data-origin=
-                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/5a18dd1c-3fea-4782-adcd-92e8e4ca9d06.png">
+                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/b645c3da-7c35-47da-a9a2-9721d761cfdd.png">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.12]"
+                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.13]"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/5479d714-14e7-4b84-a5a0-4ce643e1ff96_base_resized.jpg"
+                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/1c4670bd-3ef5-4e11-bd22-b4d5c50c29a3_base_resized.jpg"
                             data-origin=
-                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/5479d714-14e7-4b84-a5a0-4ce643e1ff96.png">
+                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/1c4670bd-3ef5-4e11-bd22-b4d5c50c29a3.png">
                           </div>
                         </div>
                       </div>
@@ -323,15 +323,15 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/483d7905-d263-4f44-8244-b6b553a3c620_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/1eafdfe5-9c98-41a1-80a5-9725c0252c8f_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/5a18dd1c-3fea-4782-adcd-92e8e4ca9d06_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/b645c3da-7c35-47da-a9a2-9721d761cfdd_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/5479d714-14e7-4b84-a5a0-4ce643e1ff96_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/1c4670bd-3ef5-4e11-bd22-b4d5c50c29a3_base_resized.jpg">
                         </div></a>
                       </div>
                       <section class="main-info-column">
@@ -351,6 +351,7 @@
                             ◆モデルに関する問題点やご指摘がありましたら◆ twitter:
                             @toy_box_sitori メールアドレス:
                             booth@toy-box.link までご一報下さい。 ◆修正履歴◆
+                            ◇2022.06.19◇ 新しく制作したVer13をアップしました。
                             ◇2021.09.10◇ 新しく制作したVer12をアップしました。
                             ◇2021.03.18◇ 新しく制作したVer11をアップしました。
                             ◇2020.09.22◇ 新しく制作したVer10をアップしました。
